@@ -334,9 +334,9 @@ There is no automatic facility for deleting membership records completely from t
     </tr>
 
     <tr class="row0">
-      <td class="col0 leftalign" valign="top"><a name="desc_allow_buy_now"></a>Allow Buy-Now Payment Buttons?</td>
+      <td class="col0 leftalign" valign="top"><a name="desc_enable_paypal"></a>Enable PayPal Payments?</td>
       <td class="col1 leftalign">
-        If this option is &quot;No&quot; then the only payment options will be &quot;Add to Cart&quot; (if enabled in the Paypal plugin) and/or &quot;Pay by Check&quot; (if enabled in this plugin). The reason you may wish to disable Buy Now buttons is if you offer additional products along with the membership, such as decals, patches, name tags, etc. After the buyer clicks &quot;Add to Cart&quot; they will be directed to your product catalog.
+        Select whether to use PayPal for payments, and whether to allow Buy-Now buttons. The reason you may wish to disable Buy Now buttons is if you offer additional products along with the membership, such as decals, patches, name tags, etc. After the buyer clicks &quot;Add to Cart&quot; they will be directed to your product catalog.
       </td>
     </tr>
 
